# YARP

./: CLAUDE.md  LICENSE  ManualTestSample.yaml  PROJECT_BLUEPRINT.md  agent_operating_manual.md  ai_blueprint_meta.md  api_conventions.md  coding_standards.md  database_conventions.md  git_conventions.md  project_spec.md  project_start_prompt.md  rag_agent_friendly_build.txt  repo_template_spec.md  task_spec_template.md
rag-api/: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  fly.toml  pyproject.toml
rag-api/.github/workflows/: ci.yml  deploy.yml
rag-api/app/: config.py  db.py  main.py  mcp_server.py  worker.py
rag-api/app/models/: __init__.py  chunk.py  document.py
rag-api/app/providers/: ai_client.py
rag-api/app/routers/: collections.py  documents.py  query.py
rag-api/app/schemas/: document.py  query.py
rag-api/app/services/: auth.py  chunking.py  document_service.py  embedding.py  generation.py  ingestion.py  job_queue.py  reranking.py  retrieval.py  storage.py
rag-api/docs/: AGENTS.md  ARCHITECTURE.md  DEVELOPMENT.md  MANUAL_TEST_PLAN.md  MCP_TEST_PLAN.md  PHASE2_PLAN.md  PHASE3_PLAN.md
rag-api/migrations/: env.py
rag-api/scripts/: generate_token.py
rag-api/tasks/: task_01_database_setup.md  task_02_document_upload.md  task_03_text_extraction_chunking.md  task_04_embeddings.md  task_05_vector_retrieval.md  task_06_llm_generation.md  task_07_query_endpoint.md  task_08_streaming.md  task_09_tests.md  task_10_claude_migration.md  task_p2_01_multitenancy_schema.md  task_p2_02_auth_service.md  task_p2_03_storage_service.md  task_p2_04_document_management.md  task_p2_05_mcp_server.md  task_p2_06_phase2_tests.md  task_p3_01_mcp_native_query.md  task_p3_02_cloud_deployment.md  task_p3_03_async_ingestion.md  task_p3_04_hybrid_search.md  task_p3_05_reranking.md  task_p3_06_collections.md
rag-api/tests/: README.md  conftest.py  test_auth.py  test_chunking.py  test_document_management.py  test_documents.py  test_embedding.py  test_generation.py  test_integration.py  test_mcp_server.py  test_p3_06_collections.py  test_query.py  test_retrieval.py  test_storage.py
(+10 files in other folders)
